<resources>
    <string name="app_name">MAPAS</string>
    <string name="buttonTelaConfig_txt">Configurações</string>
    <string name="buttonTelaNaveg_txt">Navegação</string>
    <string name="buttonTelaHist_txt">Histórico</string>
    <string name="buttonTelaGnss_txt">GNSS</string>
    <string name="buttonTelaCred_txt">Créditos</string>
    <string name="labelCoordenadas">Formato de coordenadas do mapa</string>
    <string name="labelUnidadeVelocidade">Formato apresentação velocidade</string>
    <string name="labelOrientaçãoMapa">Orientação Mapa</string>
    <string name="labelTipoMapa">Tipo de mapa</string>
    <string name="labelInformacaoTrafego">Informação de tráfego</string>

    <string-array name="fomatosCoordenadas">
        <item>Grau decimal</item>
        <item>Grau-Minuto decimal</item>
        <item>Grau-Minuto-Segundo decimal</item>
    </string-array>

    <string-array name="fomatosVelocidade">
        <item>Km/h (quilometro por hora)</item>
        <item>Mph (milhas por hora)</item>
    </string-array>

    <string-array name="orientacoesMapa">
        <item>Nenhuma</item>
        <item>North Up</item>
        <item>Course Up</item>
    </string-array>

    <string-array name="tiposMapa">
        <item>Vetorial</item>
        <item>Imagem de satélite </item>
    </string-array>
    <string name="labelBtnSalvar">Salvar</string>
    <string name="labelBtnCancelar">Cancelar</string>
    <string name="labelSobre">Sobre</string>
    <string name="labelDevs">Desenvolvedores</string>
    <string name="labelVersion">Versão</string>
    <string name="labelTitleHistorico">Histórico</string>
    <string name="labelModoVisualizacaoHistorico">Modo de visualização:</string>
    <string name="buttonModoTabela">Tabela</string>
    <string name="buttonModoMapa">Mapa</string>
    <string name="title_activity_navegacao">Navegação Activity</string>
    <string name="labelVisualizacaoLog">Histórico de Localizações</string>
    <string name="labelTableHeaderHistorico">ID | COORDENADAS -|- HORÁRIO</string>
    <string name="labelBtnLimparHistorico">Limpar Histórico</string>
    <string name="title_activity_historico_mapa">HistoricoMapa</string>
    <string name="labelBtnLimparHistorico2">LIMPAR HISTÓRICO</string>
    <string name="labelBtnEsferaCeleste">ESFERA CELESTE</string>
    <string name="labelBtnInfoSatelites">INFORMAÇÕES DE SATÉLITES</string>
    <!-- Strings used for fragments for navigation -->

</resources>