<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_telaconfiguracao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonTelaConfig_txt" />

    <Button
        android:id="@+id/button_telanavegacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonTelaNaveg_txt" />

    <Button
        android:id="@+id/button_telahistorico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonTelaHist_txt" />

    <Button
        android:id="@+id/button_telagnss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonTelaGnss_txt" />

    <Button
        android:id="@+id/button_telacreditos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonTelaCred_txt" />
</LinearLayout>