<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuHistorico">

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="498dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:fontFamily="casual"
            android:foregroundTint="#11A0B3"
            android:text="@string/labelTitleHistorico"
            android:textAlignment="center"
            android:textColor="#11A0B3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/labelModoVisualizacaoHistorico"
            android:textColor="#11A0B3"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnModeTable"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:backgroundTint="#11A0B3"
            android:text="@string/buttonModoTabela"
            android:textAlignment="center"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:icon="@android:drawable/ic_menu_sort_by_size" />

        <Button
            android:id="@+id/btnModeMap"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:backgroundTint="#11A0B3"
            android:text="@string/buttonModoMapa"
            android:textAlignment="center"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:icon="@android:drawable/ic_menu_mapmode" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>