<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuGnss">

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="561dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="casual"
            android:text="@string/buttonTelaGnss_txt"
            android:textAlignment="center"
            android:textColor="#11A0B3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEsferaCeleste"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:backgroundTint="#11A0B3"
            android:text="@string/labelBtnEsferaCeleste"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btnInfoSatelite"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:backgroundTint="#11A0B3"
            android:foregroundTint="#11A0B3"
            android:text="@string/labelBtnInfoSatelites"
            app:cornerRadius="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>