<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spinnerKM"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:foregroundTint="#E63C3C"
    tools:context=".ConfigActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="332dp"
        android:layout_height="370dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelCoordenadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelCoordenadas"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#11A0B3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerCoordenadas"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:backgroundTint="#11A0B3"
            android:backgroundTintMode="src_in"
            android:entries="@array/fomatosCoordenadas"
            android:foregroundTint="#C31F1F"
            android:foregroundTintMode="src_in" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/labelUnidadeVelocidade"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#11A0B3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerFormatoVelocidade"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:backgroundTint="#11A0B3"
            android:entries="@array/fomatosVelocidade" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/labelOrientaçãoMapa"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#11A0B3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerOrientacaoMapa"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:backgroundTint="#11A0B3"
            android:entries="@array/orientacoesMapa"
            android:foregroundTint="@color/purple_500" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#BA2F2F"
            android:foregroundTint="#D51A1A"
            android:paddingTop="10dp"
            android:text="@string/labelTipoMapa"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#11A0B3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerTipoMapa"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:backgroundTint="#11A0B3"
            android:entries="@array/tiposMapa"
            android:foregroundTint="@color/purple_500" />

        <Switch
            android:id="@+id/switchInformacaoTrafego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/labelInformacaoTrafego"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#11A0B3"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="271dp"
        android:layout_height="108dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.408">

        <Button
            android:id="@+id/btnSalvarConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#11A0B3"
            android:text="@string/labelBtnSalvar"
            android:textAlignment="center"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:icon="@android:drawable/ic_menu_save" />

        <Button
            android:id="@+id/btnCancelarConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#11A0B3"
            android:onClick="onClick"
            android:text="@string/labelBtnCancelar"
            android:textAlignment="center"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:icon="@android:drawable/ic_menu_close_clear_cancel"
            app:iconTintMode="src_in" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>